--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
     <main class="container">
       <img src="img/perfil.webp" alt="Foto Cliente" class="profile-img" />
-      <h1>Rey Vivas</h1>
-      <p class="subtitle">Projects and Links</p>
+      <h1>Ray Vivas</h1>
+      <p class="subtitle">Projects and Links FUNCIONA</p>
 
       <nav class="links" aria-label="Links de compañías">
         <a
