Tarjeta de Contacto

--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
     <main class="container">
       <img src="img/perfil.webp" alt="Foto Cliente" class="profile-img" />
       <h1>Ray Vivas</h1>
-      <p class="subtitle">Projects and Links FUNCIONA</p>
+      <p class="subtitle">Acquisitions & Development Associate</p>
 
       <nav class="links" aria-label="Links de compañías">
+        <a
+          href="ray-vivas.vcf"
+          class="save-contact-btn"
+          download
+        >
+          <i class="fa fa-address-card"></i> Save Contact
+        </a>
+
         <a
           href="https://atexgrp.com"
           class="card-link"
