Cambio de informacion y estilos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Rey Vivas</title>
+    <title>Ray Vivas</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -21,7 +21,7 @@
           href="ray-vivas.vcf"
           class="save-contact-btn"
         >
-          <i class="fa fa-address-card"></i> Save Contact
+          <i class="fa fa-address-card"></i><h3>Save Contact</h3>
         </a>
 
         <a
@@ -83,15 +83,10 @@
       </nav>
 
       <div class="social-icons" aria-label="Redes sociales">
-        <a href="https://www.linkedin.com/in/reynaldovivas/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/rayvivas/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
           <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="https://www.instagram.com/atex.group/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
-          <i class="fab fa-youtube"></i>
-        </a>
+
       </div>
       
     </main>
